added build artifact storage to vultr-compile

--- a/.github/workflows/vultr-compile.yaml
+++ b/.github/workflows/vultr-compile.yaml
@@ -13,3 +13,7 @@ jobs:
         with:
           command: build
           args: --release
+      - uses: actions/upload-artifact@v3
+        with:
+          name: sparksrs
+          path: target/release/sparksrs
