--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 rand="0.8.5"
 serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["full"] }
+strum = "0.24"
+strum_macros = "0.24"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
