rename vultr-compile to nightsky-compile :)

--- a/.github/workflows/nightsky-compile.yaml
+++ b/.github/workflows/nightsky-compile.yaml
@@ -1,5 +1,5 @@
-name: vultr-compile
-run-name: vultr-compilation fired by ${{ github.actor }}
+name: nightsky-compile
+run-name: nightsky-compilation fired by ${{ github.actor }}
 on: [workflow_dispatch]
 jobs:
   compile:
