--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,12 @@
 [package]
 name = "sparksrs"
-version = "1.2.0"
+version = "1.3.0"
 edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-serenity = { version = "0.11", default-features = false, features = [
-  "client",
-  "gateway",
-  "rustls_backend",
-  "model",
-] }
+poise = { version = "0.6" }
 tokio = { version = "1.0", features = ["full"] }
-strum = "0.24"
-strum_macros = "0.24"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
