--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 rand = "0.8.5"
 poise = { version = "0.6" }
 tokio = { version = "1.0", features = ["full"] }
+color-eyre = { version = "0.6", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
