--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ color-eyre = { version = "0.6", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
+
+[lints.clippy]
+pedantic = "warn"
+nursery = "warn"
